# FFI-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ffi_parser/files/: FieldMap.csv  LUDamageSev.csv  LUSpecies.csv  TableMap.csv
src/ffi_parser/main/: ffi_parser.py  xml.py
src/ffi_parser/tools/: functions.py  server.py
