[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ffi_parser"
version = "2.0.0"
authors = [
    { name = "Corey Beinhart", email = "corey@nmhu.edu" }
]
dependencies = [
    "pandas>=2.0",
    "sqlalchemy",
    "numpy",
    "pyodbc"
]
description = "Parser for FFI admin export XML files and databases"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project-urls]
